# ordered

./: LICENSE  ordered.cabal
Data/: Poset.hs
Data/Poset/: Instances.hs  Internal.hs
