Name:               ordered
Version:            0.1
License:            OtherLicense
License-File:       LICENSE
Cabal-Version:      >= 1.6
Author:             Nick Bowler, Miguel Pagano
Maintainer:         nbowler@draconx.ca
-- Homepage:           http://repo.or.cz/w/altfloat.git
Stability:          experimental
Category:           Mathematics
Build-Type:         Simple
Synopsis:           A definition of Posets.
Description:
	A library defining the notion of Poset.
Library
    Build-Depends: base >= 4 && < 5
    Include-Dirs: .
    Exposed-Modules:
        Data.Poset
    Other-Modules:
        Data.Poset.Internal,
        Data.Poset.Instances
